# cx-agents

./: .dockerignore  .env  .env.example  .gitignore  ACP_AGENT_PLATFORM.md  Dockerfile  Dockerfile.mcp  LICENSE  MANIFEST.in  README.md  WORKPLAN.md  agent_config.py  api_server.py  cloudbuild.yaml  cloudrun-api.yaml  cloudrun-mcp.yaml  gcp_prev_code.md  hybrid_recommender.py  load_product_images_to_qdrant.py  load_products_to_qdrant.py  main.py  mcp_client.py  production_agent.py  project_layout.txt  pyproject.toml  qdrant_tool.py  requirements.txt  reset_and_load_qdrant.py  sap_commerce_mcp_server.py  sap_commerce_tools.py  security_layer.py  seed_test_data.py  start_agent.sh.md  state_machine.py  token_vault.py  win_linx.md
acp/: __init__.py  models.py  routes.py  security.py  service.py
app/: __init__.py  config.py  main.py
app/agent/: __init__.py  graph.py  llm.py  prompts.py  state.py  tools.py
app/api/: __init__.py  admin.py  auth.py  chat.py  checkout.py  health.py  payment.py  storefront.py  websocket.py
app/features/: __init__.py  audio_search.py  image_search.py  recommendations.py  registry.py
app/integrations/: __init__.py  mcp_client.py  qdrant_client.py  redis_client.py  sap_client.py  stripe_client.py  tool_cache.py
app/middleware/: __init__.py  audit.py  error_handler.py  logging_config.py  security.py
app/models/: checkout.py  payment.py  sap_commerce.py  session.py
app/services/: __init__.py  agent_service.py  checkout_service.py  payment_service.py
app/static/: index.html
app/static/admin/: index.html
app/static/admin/css/: admin.css
app/static/admin/js/: admin.js
app/static/css/: darkmode.css  sidemenu.css  styles.css
app/static/js/: app.js  audio_search.js  auth.js  backup.txt  chat.js  darkmode.js  image_search.js  recommendations.js  renderers.js  settings.js  sidemenu.js  storefront.js
impex/: 01-users.impex  02-addresses.impex  03-orders.impex
logs/: agent.log.2026-03-27  agent.log.2026-03-28  agent.log.2026-03-29  agent.log.2026-03-30  agent.log.2026-04-02  agent.log.2026-04-03  audit.log.2026-03-27  audit.log.2026-03-28  audit.log.2026-03-29  audit.log.2026-03-30  error.log.2026-03-27  error.log.2026-03-28  error.log.2026-03-29  error.log.2026-03-30  error.log.2026-04-02  error.log.2026-04-03
memory_history/: content_memory.py  user_memory.py
schemas/: redis_store.py  session.py
static/: architecture.html  index.html  ms.txt  recommendation_component.html
